# c2g

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml  release_tag.yml
example/: example.pgn  example_bullet.pgn  example_no_clock.pgn
src/: app.rs  cli.rs  config.rs  delay.rs  drawer.rs  error.rs  giffer.rs  lib.rs  main.rs  style.rs  utils.rs
src/drawer/: board.rs  error.rs  mod.rs  svgs.rs  termination.rs  utils.rs
svgs/terminations/: draw_b.svgs
tests/: example_tests.rs
