[package]
name = "c2g"
version = "0.7.0"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2018"

[features]
default = ["include-fonts", "include-svgs"]
# Embeds the fonts directory at compile time. Removes the need to pass a path to a local font when running the CLI.
include-fonts = ["include_dir"]

# Embeds the svgs directory at compile time. Removes the need to pass a path to a local directory containing SVG pieces and terminations when running the CLI.
include-svgs = ["include_dir"]

[dependencies]
clap = "2.33"
env_logger = "0.9"
gif = "^0.11.3"
image = "^0.24.1"
log = "^0.4"
pgn-reader = "0.20"
regex = "^1.5.5"
resvg = "0.22"
shakmaty = "0.21"
thiserror = "1.0"
tiny-skia = "^0.6.3"
usvg = "0.22"

include_dir = { version = "^0.6", optional = true }
