[package]
name = "c2g"
version = "0.8.0"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2021"
description = "Turn your chess PGN files into GIFs!"
readme = "README.md"
repository = "https://github.com/tomasfarias/c2g"
license = "GPL-3.0+"
license-file = "LICENSE"
keywords = ["chess", "pgn", "gif"]

[features]
default = ["include-fonts", "include-svgs"]
# Embeds the fonts directory at compile time. Removes the need to pass a path to a local font when running the CLI.
include-fonts = ["include_dir"]

# Embeds the svgs directory at compile time. Removes the need to pass a path to a local directory containing SVG pieces and terminations when running the CLI.
include-svgs = ["include_dir"]

[dependencies]
clap = "2.33"
env_logger = "0.9"
gif = "^0.12"
image = "^0.24.1"
log = "^0.4"
pgn-reader = "0.22"
regex = "^1.5.5"
resvg = "0.22"
shakmaty = "0.23"
thiserror = "1.0"
tiny-skia = "0.6"
usvg = "0.22"

include_dir = { version = "^0.6", optional = true }
